test/pass/pass_1.prsl
// RUN: %edir/prsl --codegen %s -o pass_1.ll
// RUN: clang++ -Wno-override-module pass_1.ll -o pass_1
// RUN: echo 10 | %S/pass_1 | filecheck %s --match-full-lines
// RUN: echo 10 | %edir/prsl %s | filecheck %s --match-full-lines
// CHECK: 89

fst = 0;
snd=1;
n=?;
while(n-- >0)
{
tmp = fst;
snd = (fst=snd) + tmp;
}

print snd;