test/fail/fail_3.prsl
// RUN: (prsl --codegen %s 2>&1) | filecheck %s
// RUN: (prsl %s 2>&1) | filecheck %s
// CHECK: [Line 13] Error: at 'EOF': Expect '}' after block, got: EOF

fact = 1;
n = 2;
while (n > 0)
{
	fact = fact * n;
	n--;


print fact;